feat(chat): enhance UI with message alignment, emojis, and fix file duplication
feat(chat): enhance UI with message alignment, emojis, and fix file duplication

- Fix message issue when sending files by removing manual local push; relies on WS subscription.
- Implement dynamic message alignment: own messages aligned to the right, others to the left.
- Integrate @ctrl/ngx-emoji-mart for emoji picker support.
- Configure emoji picker with native rendering.
- Add emoji styles via CDN in index.html to resolve build path export errors.

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -7,6 +7,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/@ctrl/ngx-emoji-mart@9.2.1/picker/picker.css" rel="stylesheet">
 </head>
 
 <body>
